# CNCStorageV2

./: README.MD
cnc_api/: .env.example  .gitignore  Cargo.toml  log4rs.yml
cnc_api/libs/: README.md
cnc_api/migrations/2023-11-24-105130_create_users/: up.sql
cnc_api/migrations/2023-11-24-105134_create_invites/: up.sql
cnc_api/migrations/2023-11-24-105137_create_pictures/: up.sql
cnc_api/migrations/2023-11-24-105142_create_videos/: up.sql
cnc_api/migrations/2023-11-27-130047_picture_video_name/: down.sql  up.sql
cnc_api/migrations/2023-11-28-074618_logging/: down.sql  up.sql
cnc_api/migrations/2023-11-28-104128_alter_videos_duration/: down.sql  up.sql
cnc_api/src/: db.rs  main.rs  schema.rs
cnc_api/src/handlers/: account.rs  files.rs  invites.rs  mod.rs  upload.rs  users.rs
cnc_api/src/models/: eventlogs.rs  invites.rs  jwtmodel.rs  mod.rs  pictures.rs  upload.rs  users.rs  videos.rs
cnc_api/src/routes/: mod.rs
cnc_api/src/routes/account/: create_user.rs  login_user.rs  mod.rs  regenerate_token.rs
cnc_api/src/routes/files/: mod.rs  pictures.rs  videos.rs
cnc_api/src/routes/invites/: create_invite.rs  general.rs  mod.rs
cnc_api/src/routes/upload/: mod.rs  upload_picture.rs  upload_video.rs
cnc_api/src/routes/users/: add_user.rs  general.rs  login_user.rs  mod.rs
cnc_api/src/utils/: generate_auth_token.rs  log_db.rs  mod.rs  upload_files.rs
cnc_api/src/utils/errors/: auth.rs
cnc_frontend/: package.json  pnpm-lock.yaml
scripts/: run_dev.bat  run_dev.sh
