[package]
name = "cnc_api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
chrono = { version = "0.4", features = ["serde"] }
log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4"
actix-service = "2.0.2"
jsonwebtoken = "8.3.0"  # Updated to a single, newer version
bcrypt = "0.15"
futures = "0.3"
futures-util = "0.3.29"
actix-web-grants = "3.0.2"
ring = "0.17.5"
actix-web-httpauth = "0.8.1"
actix-multipart = "0.6.1"
infer = "0.5"
azure_core = "0.17.0"
azure_storage_blobs = "0.17.0"
azure_storage = "0.17.0"